tests/src/Loader/classloader/generics/Instantiation/Negative/abstract05.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract05_abstract05_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract05_abstract05_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract05\\abstract05.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
